--- a/src/Header/Header.module.scss
+++ b/src/Header/Header.module.scss
@@ -1,8 +1,165 @@
+@import '../assets/themes/palette.css';
+
 .header {
-    height: 40px;
+    position: fixed;
     width: 100%;
-    background-color: antiquewhite;
-    color: red;
-    font-size: 16px;
-    font-weight: 700;
+    top: 0;
+    z-index: 9998;
+    background-color: var(--main-color);
+    box-shadow: 0px 4px 21px -1px rgb(185, 186, 186)
+}
+
+.menuBurger,
+.menuFilter {
+    display: none;
+    border: none;
+    background-color: var(--main-color);
+}
+
+
+.upperLayedLogo {
+    position: absolute;
+
+    &:hover {
+        cursor: pointer;
+        opacity: 0;
+        transition: 0.5s;
+    }
+
+    &:active {
+        cursor: grabbing;
+    }
+}
+
+.icons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.iconImage:hover {
+    cursor: pointer;
+    background-color: var(--icon-hover-color);
+    border-radius: 20%;
+    transition: 0.5s;
+}
+
+.iconImage:active {
+    cursor: grabbing;
+}
+
+.cart {
+    position: relative;
+}
+
+.cart #cart {
+    position: absolute;
+    background-color: rgba(220, 220, 220, 0);
+    border: none;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+}
+
+.cart .cartCount {
+    position: absolute;
+    color: white;
+    background-color: #cc3e49;
+    border-radius: 100%;
+    font-family: var(--default-font);
+    font-weight: bold;
+}
+
+.userIconWrapper {
+    position: relative;
+
+    .userName {
+        text-decoration: none;
+        color: white;
+        position: absolute;
+        right: 0;
+        bottom: -15px;
+        width: 45px;
+        text-align: center;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    header {
+        .headInfo {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            max-width: 1300px;
+            margin-left: auto;
+            margin-right: auto;
+            padding: 20px 0;
+
+            .logo {
+                margin-right: 40px;
+            }
+        }
+
+        .bottomLayedLogo,
+        .upperLayedLogo {
+            width: 300px;
+            height: 70px;
+        }
+
+        .icons .iconImage {
+            height: 40px;
+            margin-left: 40px;
+            padding: 5px;
+        }
+    }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1439.98px) {
+    header {
+        .headInfo {
+            padding: 20px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .headInfo .logo {
+            margin-right: 40px;
+        }
+
+        .bottomLayedLogo,
+        .upperLayedLogo {
+            width: 20vw;
+            height: auto;
+        }
+
+        .icons .iconImage {
+            height: 35px;
+            margin-left: 30px;
+            padding: 5px;
+        }
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .cart .cartCount {
+        font-size: 16px;
+        left: 90%;
+        padding: 0 5px;
+    }
+}
+
+@font-face {
+    font-family: 'Montserrat-SemiBold';
+    src: url("../assets/fonts/Montserrat-SemiBold.ttf");
+}
+
+@font-face {
+    font-family: 'Montserrat-Regular';
+    src: url("../assets/fonts/Montserrat-Regular.ttf");
 }
