--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import './assets/themes/palette.css';
+
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -32,7 +34,8 @@ body {
   width: 100%;
   line-height: 1;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: normal;
+  font-family: var(--default-font);
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
