--- a/src/assets/components/HeaderForm/HeaderForm.module.scss
+++ b/src/assets/components/HeaderForm/HeaderForm.module.scss
@@ -1,12 +1,4 @@
-:root {
-    --rad: 20px;
-    --dur: .3s;
-    --color-dark: #000000;
-    --color-brand: rgb(116, 35, 255);
-    --border-color: white;
-    --btn-width: 20%;
-    --bez: cubic-bezier(0, 0, 0.43, 1.49);
-}
+@import '../../themes/palette.css';
 
 .search {
     width: 100%;
@@ -20,8 +12,8 @@
 
     input,
     button {
-        border: 2px solid var(--border-color);
-        color: var(--color-dark);
+        border: 2px solid var(--white);
+        color: var(--black);
     }
 
     input[type="search"] {
@@ -31,6 +23,7 @@
         border-radius: var(--rad);
         appearance: none;
         transition: all var(--dur) var(--bez);
+        font-weight: 500;
         transition-property: width, border-radius;
         z-index: 1;
         position: relative;
@@ -43,7 +36,7 @@
 
     button {
         cursor: pointer;
-        border: 2px solid var(--border-color);
+        border: 2px solid var(--white);
         border-left: none;
         display: none;
         position: absolute;
@@ -53,11 +46,16 @@
         font-weight: 600;
         background: var(--color-brand);
         border-radius: 0 var(--rad) var(--rad) 0;
+        transition: .3s;
+
+        &:hover {
+            background: var(--color-brand-hover);
+        }
     }
 
     input:not(:placeholder-shown) {
 
-        border: 2px solid var(--border-color);
+        border: 2px solid var(--white);
         border-right: none;
         border-radius: var(--rad) 0 0 var(--rad);
 
