--- a/src/Pages/Main/ShopPanel/ShopFilters/ShopFilters.module.scss
+++ b/src/Pages/Main/ShopPanel/ShopFilters/ShopFilters.module.scss
@@ -83,6 +83,10 @@
             border: 1px solid black;
             border-radius: 10%;
         }
+
+        .checkboxText {
+            cursor: pointer;
+        }
     }
 
 }
