fix filter menu on mobile version, added searchbar input

--- a/src/Pages/Main/Main.module.scss
+++ b/src/Pages/Main/Main.module.scss
@@ -55,23 +55,7 @@
         }
     }
 
-    .shopWrapper.open-filters {
-        // .shopFilters {
-        //     display: block;
-        //     background-color: white;
-        //     overflow-y: auto;
-        //     top: 0;
-        // }
-
-        // .filterItem {
-        //     padding: 30px 70px 0 30px;
-
-        //     .filterWrapper {
-        //         padding-bottom: 10px;
-        //         border-bottom: 1px solid var(--boarder-system-color);
-        //     }
-        // }
-
+    .shopWrapperOpenFilters {
         .shopContent {
             display: none;
         }
